# jsonio

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml  bitbucket-pipelines.yml  conda-install-dependencies.bat  conda-install-dependencies.sh  environment.devenv.yml  install-dependencies.sh  install.sh  jsonArango.pro  jsonio14_example.pro  jsonio14_test.pro  jsonio17_example.pro  jsonio17_test.pro  jsonio_example.pro  jsonio_test.pro  main.cpp
.github/workflows/: ci-build.yml
Resources/: jsonio-config.json  jsonio14-config.json  jsonio17-config.json
Resources/docs/: source.md  spdlog-doc.md  time_test.ods
Resources/schemas/: query.schema.json
Resources/thrift/: docpages.thrift  impex.thrift  query.thrift  schema_test.thrift
Resources/thrift/gen-json/: query.json  schema_test.json
ci/appveyor/: install.bat
ci/pipelines/: install-osx.sh  install.sh  installVS.bat  test.sh
ci/travis/: install.sh  test.sh
cmake/modules/: JsonioFindDeps.cmake  jsonio17Config.cmake.in  jsonio17InstallCMakeConfigFiles.cmake  jsonioConfig.cmake.in  jsonioFindDeps.cmake  jsonioInstallCMakeConfigFiles.cmake
docs/: source.md
examples/: CMakeLists.txt  builder_example.cpp  coll_query_example.cpp  coll_time_test.cpp  create_example.cpp  exbuilder.cpp  exparser.cpp  parser_example.cpp  schema_example.cpp  time_parser.cpp
include/jsonio/: dbcollection.h  dbconnect.h  dbdocument.h  dbdriverar_old.h  dbdriverarango.h  dbdriverbase.h  dbedgedoc.h  dbjsondoc.h  dbquerybase.h  dbschemadoc.h  dbvertexdoc.h  exceptions.h  io_settings.h  jsonbase.h  jsonbuilder.h  jsondetail.h  jsondump.h  jsonfree.h  jsonparser.h  jsonschema.h  schema.h  schema_thrift.h  service.h  traversal.h  txt2file.h
include/jsonio14/: dbcollection.h  dbconnect.h  dbdocument.h  dbdriverarango.h  dbdriverbase.h  dbedgedoc.h  dbjsondoc.h  dbquerybase.h  dbschemadoc.h  dbvertexdoc.h  exceptions.h  io_settings.h  jsonbase.h  jsonbuilder.h  jsondetail.h  jsondump.h  jsonfree.h  jsonparser.h  jsonschema.h  schema.h  schema_thrift.h  service.h  traversal.h  txt2file.h  type_test.h
include/jsonio17/: dbcollection.h  dbconnect.h  dbdocument.h  dbdriverarango.h  dbdriverbase.h  dbedgedoc.h  dbjsondoc.h  dbquerybase.h  dbschemadoc.h  dbvertexdoc.h  exceptions.h  io_settings.h  jsonbase.h  jsonbuilder.h  jsondetail.h  jsondump.h  jsonfree.h  jsonparser.h  jsonschema.h  schema.h  schema_thrift.h  service.h  traversal.h  txt2file.h  type_test.h
src/: CMakeLists.txt  dbcollection.cpp  dbconnect.cpp  dbdocument.cpp  dbdriverar_old.cpp  dbdriverarango.cpp  dbedgedoc.cpp  dbjsondoc.cpp  dbquerybase.cpp  dbschemadoc.cpp  dbvertexdoc.cpp  exceptions.cpp  io_settings.cpp  jsonbase.cpp  jsonbuilder.cpp  jsondetail.cpp  jsondump.cpp  jsonfree.cpp  jsonio.pri  jsonio14.pri  jsonio17.pri  jsonparser.cpp  jsonschema.cpp  schema_thrift.cpp  service.cpp  shared_pool.h  traversal.cpp  txt2file.cpp
tests/: CMakeLists.txt  example_schema.h  gtest_dependency.pri  main.cpp  tst_base.h  tst_base_api.h  tst_base_complex.h  tst_builder.h  tst_dbquery.h  tst_detail.h  tst_dump.h  tst_jsonio.h  tst_jsonschema.h  tst_parser.h  tst_schema.h  tst_service.h
win-make/: Install-win64-mingw.ps1  WIN-README.md  WIN_INSTALL.md  install-dependencies-Win-mingw.sh  install-dependencies-Win-msvc.bat
